--- a/views/freaks/write_blog.ejs
+++ b/views/freaks/write_blog.ejs
@@ -16,7 +16,7 @@
 
       <div class="app-title">
         <div>
-          <h1>Offer Blog</h1>
+          <h1>Write Blog</h1>
         </div>
       </div>
 
@@ -31,14 +31,10 @@
                 </div>
 
                 <div class="form-label-group my-4">
-                  <input type="text" id="inputName" name="inputName" class="form-control" placeholder="Name" required>
-                  <label for="inputName">Name(Post By)</label>
+                  <input type="text" id="inputLocation" name="inputLocation" class="form-control" placeholder="inputLocation" required>
+                  <label for="inputLocation">Location</label>
                 </div>
 
-                <div class="form-label-group my-4">
-                  <input type="date" id="inputDate" name="inputDate" class="form-control" placeholder="Email address" required>
-                  <label for="inputDate">Date</label>
-                </div>
 
                 <div class="form-label-group my-4">
                   <textarea class="form-control" id="inputDescription" name="inputDescription" placeholder="Description" rows="10" required></textarea>
