--- a/views/freaks/index.ejs
+++ b/views/freaks/index.ejs
@@ -29,19 +29,19 @@
                   <img src="/abc/images/freaks.png" alt="User Image" height="150px" width="150px" style=" border-radius: 50%;">
                 </div>
                 <div class="form-label-group my-4">
-                  <p name="inputName">Name: </p>
+                  <p name="inputName">Name: <%=data.name%></p>
                 </div>
 
                 <div class="form-label-group my-4">
-                  <p name="inputName">Email Address: </p>
+                  <p name="inputName">Email Address: <%=data.email%> </p>
                 </div>
 
                 <div class="form-label-group my-4">
-                  <p name="inputName">Phone No: </p>
+                  <p name="inputName">Phone No: <%=data.phone%> </p>
                 </div>
 
                 <div class="form-label-group my-4">
-                  <p name="inputName">Gender: </p>
+                  <p name="inputName">Gender: <%=data.gender%> </p>
                 </div>
             </div>
           </div>
