--- a/views/travel_agency/index.ejs
+++ b/views/travel_agency/index.ejs
@@ -29,11 +29,11 @@
                   <img src="/abc/images/freaks.png" alt="User Image" height="150px" width="150px" style=" border-radius: 50%;">
                 </div>
                 <div class="form-label-group my-4">
-                  <p name="inputName">Name: </p>
+                  <p name="inputName">Name: <%=name%></p>
                 </div>
 
                 <div class="form-label-group my-4">
-                  <p name="inputName">Email Address: </p>
+                  <p name="inputName">Email Address: <%=email%></p>
                 </div>
 
                 <div class="form-label-group my-4">
