--- a/views/travel_agency/edit_profile.ejs
+++ b/views/travel_agency/edit_profile.ejs
@@ -25,49 +25,41 @@
           <div class="card card-signin my-4">
             <div class="card-body">
               <form class="form-signin" method="post">
-                <div class="form-label-group my-4">
-                  <input type="text" id="inputName" name="inputName" class="form-control" placeholder="Name" required>
-                  <label for="inputName">Name</label>
-                </div>
 
-                <div class="form-label-group my-4">
-                  <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="Email address" required>
-                  <label for="inputEmail">Email address</label>
-                </div>
+                  <div class="form-label-group my-4">
+                      <input type="text" id="inputName" name="inputName" class="form-control" placeholder="Name" required value="<%= data.name %>">
+                      <label for="inputName">Name</label>
+                    </div>
+    
+                    <div class="form-label-group my-4">
+                      <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="Email address" required value="<%= data.email %>">
+                      <label for="inputEmail">Email address</label>
+                    </div>
 
-                 <div class="form-label-group my-4">
-                  <input type="text" id="inputAgencyname" name="inputAgencyname" class="form-control" placeholder="Email address" required>
-                  <label for="inputAgencyname">Agency name</label>
-                </div>
+                    <div class="form-label-group my-4">
+                        <input type="text" id="inputAgencyname" name="inputAgencyname" class="form-control" placeholder="Agency name" required value="<%= data.agency_name %>">
+                        <label for="inputAgencyname">Agency name</label>
+                      </div>
+    
+                    <div class="form-label-group my-4">
+                      <input type="text" id="inputPhone" name="inputPhone" class="form-control" placeholder="Phone No" required value="<%= data.phone %>">
+                      <label for="inputPhone">Phone No</label>
+                    </div>
 
-                <div class="form-label-group my-4">
-                  <input type="text" id="inputPhone" name="inputPhone" class="form-control" placeholder="Phone No" required>
-                  <label for="inputPhone">Phone No</label>
-                </div>
+                    <div class="form-label-group my-4">
+                      <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password" required >
+                      <label for="inputPassword">Password</label>
+                    </div>
+                    
+                    <div class="form-label-group my-4">
+                      <input type="password" id="inputConfirmPassword" name="inputConfirmPassword" class="form-control" placeholder="Password" required>
+                      <label for="inputConfirmPassword">Confirm password</label>
+                    </div>
+    
+                    <div class="form-label-group my-4">
+                      <input id="inputImage" name="inputImage" class="form-control" type="file">
+                    </div>
 
-                <div class="form-label-group my-4">
-                  <div class="form-group">
-                    <select class="form-control" id="inputGender" name="inputGender">
-                      <option>Select your Gender</option>
-                      <option value="male">Male</option>
-                      <option value="female">Female</option>
-                    </select>
-                  </div>
-                </div>
-
-                <div class="form-label-group my-4">
-                  <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password" required>
-                  <label for="inputPassword">Password</label>
-                </div>
-                
-                <div class="form-label-group my-4">
-                  <input type="password" id="inputConfirmPassword" name="inputConfirmPassword" class="form-control" placeholder="Password" required>
-                  <label for="inputConfirmPassword">Confirm password</label>
-                </div>
-
-                <div class="form-label-group my-4">
-                  <input id="inputImage" name="inputImage" class="form-control" type="file">
-                </div>
 
 
                 <button class="btn btn-lg btn-block my-4" type="submit">Update</button>
