--- a/views/travel_agency/index.ejs
+++ b/views/travel_agency/index.ejs
@@ -29,23 +29,23 @@
                   <img src="/abc/images/freaks.png" alt="User Image" height="150px" width="150px" style=" border-radius: 50%;">
                 </div>
                 <div class="form-label-group my-4">
-                  <p name="inputName">Name: <%=name%></p>
+                  <p name="inputName">Name:  <%= data.name %> </p>
                 </div>
 
                 <div class="form-label-group my-4">
-                  <p name="inputName">Email Address: <%=email%></p>
+                  <p name="inputAgency">Agency Name:  <%= data.agency_name %> </p>
                 </div>
 
                 <div class="form-label-group my-4">
-                  <p name="inputName">Agency name: </p>
+                  <p name="inputName">Email Address: <%= data.email %> </p>
                 </div>
 
                 <div class="form-label-group my-4">
-                  <p name="inputName">Phone No: </p>
+                  <p name="inputName">Phone No: <%= data.phone %></p>
                 </div>
 
                 <div class="form-label-group my-4">
-                  <p name="inputName">Gender: </p>
+                  <p name="inputName">Gender: <%= data.gender %></p>
                 </div>
             </div>
           </div>
