--- a/views/travel_agency/offer_events.ejs
+++ b/views/travel_agency/offer_events.ejs
@@ -30,15 +30,29 @@
                   <label for="inputTittle">Tittle</label>
                 </div>
 
-                <div class="form-label-group my-4">
-                  <input type="text" id="inputAgencyname" name="inputAgencyname" class="form-control" placeholder="Agency Name" required>
-                  <label for="inputAgencyname">Agency name</label>
-                </div>
+                
 
                 <div class="form-label-group my-4">
-                  <input type="date" id="inputDate" name="inputDate" class="form-control" placeholder="Email address" required>
-                  <label for="inputDate">Date</label>
-                </div>
+                    <input type="text" id="inputPostby" name="inputPostby" class="form-control" placeholder="Post By" required>
+                    <label for="inputPostby">Post By</label>
+                  </div>
+
+                  <div class="form-label-group my-4">
+                      <input type="text" id="inputAgencyname" name="inputAgencyname" class="form-control" placeholder="Agency Name" required>
+                      <label for="inputAgencyname">Agency name</label>
+                    </div>
+
+                
+
+                <div class="form-label-group my-4">
+                    <input type="text" id="inputPlace" name="inputPlace" class="form-control" placeholder="Place" required>
+                    <label for="inputPlace">Place</label>
+                  </div>
+
+                  <div class="form-label-group my-4">
+                      <input type="date" id="inputDate" name="inputDate" class="form-control" placeholder="Email address" required>
+                      <label for="inputDate">Date</label>
+                    </div>
 
                 <div class="form-label-group my-4">
                   <textarea class="form-control" id="inputDescription" name="inputDescription" placeholder="Description" rows="10" required></textarea>
@@ -52,7 +66,7 @@
                 
                 <div class="form-label-group my-4">
                   <input type="text" id="inputPrice" name="inputPrice" class="form-control" placeholder="inputPrice" required>
-                  <label for="inputPrice">Price Per Person</label>
+                  <label for="inputPrice">Cost Per Person</label>
                 </div>
 
                 <div class="form-label-group my-4">
