--- a/views/travel_agency/edit_events.ejs
+++ b/views/travel_agency/edit_events.ejs
@@ -31,23 +31,25 @@
                     <tr>
                       <th>Tittle</th>
                       <th>Agency name</th>
+                      <th>Place</th>
                       <th>Date</th>
                       <th>Description</th>
                       <th>Person Capacity</th>
                       <th>Price Per Person</th>
                       <th>Image</th>
-                      <th>Edit</th>
                     </tr>
                   </thead>
+                  
                   <tbody>
                     <tr>
-                      <td>Tiger Nixon</td>
-                      <td>System Architect</td>
-                      <td>Edinburgh</td>
-                      <td>61</td>
-                      <td>2011/04/25</td>
-                      <td>$320,800</td>
-                      <td><img src="/abc/images/portfolio_01.jpg" height="65px" width="100px"></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td><img src="" height="65px" width="100px"></td>
                       <td>
                         <a href="/travel_agency/edit"> <button class="btn btn-lg btn-block" type="submit">Edit</button></a>
                       </td>
