--- a/views/travel_agency/sidenav.ejs
+++ b/views/travel_agency/sidenav.ejs
@@ -9,8 +9,8 @@
     <aside class="app-sidebar">
       <div class="app-sidebar__user"><img class="app-sidebar__user-avatar" src="/abc/images/freaks.png" alt="User Image" height="50px" width="50px" style=" border-radius: 50%;">
         <div>
-          <p class="app-sidebar__user-name"><%=name%></p>
-          <p class="app-sidebar__user-designation"><%=user_type%></p>
+          <p class="app-sidebar__user-name"><%=user.name%></p>
+          <p class="app-sidebar__user-designation"><%=user.user_type%></p>
         </div>
       </div>
       <ul class="app-menu">
