--- a/views/admin/edit_profile.ejs
+++ b/views/admin/edit_profile.ejs
@@ -29,24 +29,18 @@
                   <input type="text" id="inputName" name="inputName" class="form-control" placeholder="Name" required value="<%= data.name %>">
                   <label for="inputName">Name</label>
                 </div>
-
-                <div class="form-label-group my-4">
-                  <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="Email address" required value="<%= data.email %>">
-                  <label for="inputEmail">Email address</label>
-                </div>
-
                 <div class="form-label-group my-4">
                   <input type="text" id="inputPhone" name="inputPhone" class="form-control" placeholder="Phone No" required value="<%= data.phone %>">
                   <label for="inputPhone">Phone No</label>
                 </div>
 
                 <div class="form-label-group my-4">
-                  <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password" required >
+                  <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password" required value="<%= data.password %>" >
                   <label for="inputPassword">Password</label>
                 </div>
                 
                 <div class="form-label-group my-4">
-                  <input type="password" id="inputConfirmPassword" name="inputConfirmPassword" class="form-control" placeholder="Password" required>
+                  <input type="password" id="inputConfirmPassword" name="inputConfirmPassword" class="form-control" placeholder="Password" required value="<%= data.password %>">
                   <label for="inputConfirmPassword">Confirm password</label>
                 </div>
 
