--- a/views/events/book_now.ejs
+++ b/views/events/book_now.ejs
@@ -9,8 +9,15 @@
 </head>
 <body>
 
+    <% if (user.login=="true") { %>
+        <% if(user.user_type=="Admin") {%>
+            <% include ../common/adminheader.ejs %>
+            <% } else { %>
+                <% include ../common/user_header.ejs %>
+            <% } %>
+    <% } else { %>
     <% include ../common/header.ejs %>
-
+    <% } %>
     <div id="wrapper">
         <div class="section">
             <div class="container">
