--- a/views/common/adminheader.ejs
+++ b/views/common/adminheader.ejs
@@ -12,7 +12,7 @@
             <li class="nav-item"><a class="nav-link" href="/blog">Blog</a></li>
             <li class="nav-item"><a class="nav-link" href="/events">Events</a></li>
             <li class="nav-item dropdown submenu">
-              <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%=name%></a>
+              <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%=user.name%></a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                    <li class="nav-item"><a class="nav-link" href="/admin">Admin Panel</a></li>
                   <li class="nav-item"><a class="nav-link" href="/admin/profile">Profile</a></li>
