--- a/views/travel_agency/edit_profile.ejs
+++ b/views/travel_agency/edit_profile.ejs
@@ -47,12 +47,12 @@
                     </div>
 
                     <div class="form-label-group my-4">
-                      <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password" required >
+                      <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password" required value="<%= data.password %>">
                       <label for="inputPassword">Password</label>
                     </div>
                     
                     <div class="form-label-group my-4">
-                      <input type="password" id="inputConfirmPassword" name="inputConfirmPassword" class="form-control" placeholder="Password" required>
+                      <input type="password" id="inputConfirmPassword" name="inputConfirmPassword" class="form-control" placeholder="Password" required value="<%= data.password %>">
                       <label for="inputConfirmPassword">Confirm password</label>
                     </div>
     
