--- a/views/travel_agency/offer_events.ejs
+++ b/views/travel_agency/offer_events.ejs
@@ -30,20 +30,6 @@
                   <label for="inputTittle">Tittle</label>
                 </div>
 
-                
-
-                <div class="form-label-group my-4">
-                    <input type="text" id="inputPostby" name="inputPostby" class="form-control" placeholder="Post By" required>
-                    <label for="inputPostby">Post By</label>
-                  </div>
-
-                  <div class="form-label-group my-4">
-                      <input type="text" id="inputAgencyname" name="inputAgencyname" class="form-control" placeholder="Agency Name" required>
-                      <label for="inputAgencyname">Agency name</label>
-                    </div>
-
-                
-
                 <div class="form-label-group my-4">
                     <input type="text" id="inputPlace" name="inputPlace" class="form-control" placeholder="Place" required>
                     <label for="inputPlace">Place</label>
@@ -53,6 +39,11 @@
                       <input type="date" id="inputDate" name="inputDate" class="form-control" placeholder="Email address" required>
                       <label for="inputDate">Date</label>
                     </div>
+
+                  <div class="form-label-group my-4">
+                    <input type="text" id="inputDuration" name="inputDuration" class="form-control" placeholder="Duration" required>
+                    <label for="inputDuration">Duration</label>
+                  </div>
 
                 <div class="form-label-group my-4">
                   <textarea class="form-control" id="inputDescription" name="inputDescription" placeholder="Description" rows="10" required></textarea>
@@ -65,8 +56,8 @@
                 </div>
                 
                 <div class="form-label-group my-4">
-                  <input type="text" id="inputPrice" name="inputPrice" class="form-control" placeholder="inputPrice" required>
-                  <label for="inputPrice">Cost Per Person</label>
+                  <input type="text" id="inputCost" name="inputCost" class="form-control" placeholder="Cost Per Person" required>
+                  <label for="inputCost">Cost Per Person</label>
                 </div>
 
                 <div class="form-label-group my-4">
