--- a/views/freaks/notifications.ejs
+++ b/views/freaks/notifications.ejs
@@ -21,11 +21,12 @@
       </div>
 
       
+        <% for(var i=0 ; i < data.length; i++ ) { %>
 
       <div class="alert alert-info">
-        <strong><a href="/events/blog_details">"Tittle"</a> </strong>&nbsp blog post is approved by admin.
+        <strong><a href="/events/blog_details">"<%=data[i].name %>"   </a> </strong>&nbsp <%=data.name %> Comment on your post ..
       </div>
-
+    <% } %>
 
 
     </main>
