--- a/views/travel_agency/history.ejs
+++ b/views/travel_agency/history.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>History</title>
+    <title>Edit Events</title>
     <link rel="stylesheet" type="text/css" href="/abc/css/travel_agency.css">
     <link rel="stylesheet" type="text/css" href="/abc/css/registration.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,7 +16,7 @@
 
       <div class="app-title">
         <div>
-          <h1>History</h1>
+          <h1>Edit Events</h1>
         </div>
       </div>
 
@@ -31,24 +31,30 @@
                     <tr>
                       <th>Tittle</th>
                       <th>Agency name</th>
+                      <th>Place</th>
                       <th>Date</th>
+                      <th>Duration</th>
                       <th>Description</th>
                       <th>Person Capacity</th>
                       <th>Price Per Person</th>
                       <th>Image</th>
                     </tr>
                   </thead>
+                  <% for(var i=0 ; i < event.length; i++ ) { %>
                   <tbody>
                     <tr>
-                      <td>Tiger Nixon</td>
-                      <td>System Architect</td>
-                      <td>Edinburgh</td>
-                      <td>61</td>
-                      <td>2011/04/25</td>
-                      <td>$320,800</td>
-                      <td><img src="/abc/images/portfolio_01.jpg" height="65px" width="100px"></td>
+                      <td><%=event[i].tittle%></td>
+                      <td><%=event[i].agencyname%></td>
+                      <td><%=event[i].place%></td>
+                      <td><%=event[i].date%></td>
+                      <td><%=event[i].duration%></td>
+                      <td><%=event[i].description%></td>
+                      <td><%=event[i].person%></td>
+                      <td><%=event[i].cost%></td>
+                      <td><img src="<%=event[i].image%>" height="65px" width="100px"></td>
                     </tr>
                   </tbody>
+                  <% }%>
                 </table>
               </div>
             </div>
