--- a/views/admin/reply.ejs
+++ b/views/admin/reply.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Message | Admin Panel</title>
+    <title>Reply | Admin Panel</title>
     <link rel="stylesheet" type="text/css" href="/abc/css/travel_agency.css">
     <link rel="stylesheet" type="text/css" href="/abc/css/registration.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,7 +17,7 @@
 
       <div class="app-title">
         <div>
-          <h1>Message </h1>
+          <h1>Reply </h1>
         </div>
       </div>
 
@@ -27,10 +27,13 @@
           <div class="tile">
             <div class="tile-body">
               <div class="table-responsive">
-               Sender:&nbsp;&nbsp;&nbsp;admin@travelers.com </br></br>
-               Reciever:&nbsp;&nbsp;&nbsp;<input type="text" name="reciever"> </br></br>
+                  <% for(var i=0; i < data.length; i++){ %>
+               Reply From:&nbsp;&nbsp;&nbsp;admin@travelers.com </br></br>
+               Reply to:&nbsp;&nbsp;&nbsp;<input type="text" name="reciever" value="<%= data[i].sender %>"> </br></br>
                Message:&nbsp;&nbsp;&nbsp; <input type="text" name="message">&nbsp;&nbsp;&nbsp;
                <input type="submit" name="submit" value="Send!" >
+
+               <% } %>
               </div>
             </div>
           </div>
