--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -97,7 +97,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-4 market-update-gd">
 				<div class="market-update-block clr-block-3">
 					<div class="col-md-8 market-update-left">
-						<h3>23</h3>
+						<h3><%= result2.id %></h3>
 						<h4>Messages</h4>
 						<p>Other hand, we denounce</p>
 					</div>
@@ -125,8 +125,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<h3>Users</h3>
 				</div>
 				<div class='bar_group'>
-						<div class='bar_group__bar thin' label='Freaks' show_values='true' tooltip='true' value='34'></div>
-						<div class='bar_group__bar thin' label='Agencies' show_values='true' tooltip='true' value='270'></div>
+						<div class='bar_group__bar thin' label='Freaks' show_values='true' tooltip='true' value='<%= result3.id %>'></div>
+						<div class='bar_group__bar thin' label='Agencies' show_values='true' tooltip='true' value='<%= result4.id %>'></div>
 				</div>
 			<!--//Progress bars-->
 			</div>
@@ -145,8 +145,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<h3>Published</h3>
 					</div>
 					<div class='bar_group'>
-							<div class='bar_group__bar thin' label='Blogs' show_values='true' tooltip='true' value='343'></div>
-							<div class='bar_group__bar thin' label='Events' show_values='true' tooltip='true' value='271'></div>
+							<div class='bar_group__bar thin' label='Blogs' show_values='true' tooltip='true' value='<%= result5.id %>'></div>
+							<div class='bar_group__bar thin' label='Events' show_values='true' tooltip='true' value='<%= result6.id %>'></div>
 					</div>
 						<script src="/abc/js/bars.js"></script>
 	
