--- a/views/admin/messages.ejs
+++ b/views/admin/messages.ejs
@@ -41,14 +41,19 @@
                       <th></th>
                     </tr>
                   </thead>
+                  <% for(var i=0; i < data.length; i++){ %>
                   <tbody>
                     <tr>
-                      <td>Tiger Nixon</td>
-                      <td>System Architect</td>
+                      <td><%= data[i].sender%></td>
+                      <td><%= data[i].message%></td>
                       <td>
-                        <a href="/admin/message"> <button class="btn btn-lg btn-block" type="submit">Reply</button></a>
+                        <a href="/admin/message/reply/<%=data[i].id%>">Reply</a>
                       </td>
+                      <td>
+                          <a href="/admin/message/read/<%=data[i].id%>">Mark As Read</a>
+                        </td>
                     </tr>
+                    <% } %>
                   </tbody>
                 </table>
               </div>
