--- a/views/admin/notifications.ejs
+++ b/views/admin/notifications.ejs
@@ -25,7 +25,7 @@
       
       <% for(var i=0; i < data.length; i++){ %>
       <div class="alert alert-info">
-        <strong><a href="/admin/pendingevents">"<%= data[i].tittle %>"</a> </strong>&nbsp event is offered by  <%= data[i].postby %> from <%= data[i].agencyname %>. Item is on pending list.
+        <strong><a href="/admin/pendingevents">"<%= data[i].title %>"</a> </strong>&nbsp event is offered by  <%= data[i].postby %> from <%= data[i].agencyname %>. Item is on pending list.
       </div>
       <% } %>
 
