--- a/views/travel_agency/delete_events.ejs
+++ b/views/travel_agency/delete_events.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Delete Events</title>
+    <title>Edit Events</title>
     <link rel="stylesheet" type="text/css" href="/abc/css/travel_agency.css">
     <link rel="stylesheet" type="text/css" href="/abc/css/registration.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,7 +16,7 @@
 
       <div class="app-title">
         <div>
-          <h1>Delete Events</h1>
+          <h1>Edit Events</h1>
         </div>
       </div>
 
@@ -31,34 +31,42 @@
                     <tr>
                       <th>Tittle</th>
                       <th>Agency name</th>
+                      <th>Place</th>
                       <th>Date</th>
+                      <th>Duration</th>
                       <th>Description</th>
                       <th>Person Capacity</th>
                       <th>Price Per Person</th>
                       <th>Image</th>
-                      <th>Edit</th>
                     </tr>
                   </thead>
+                  <% for(var i=0 ; i < event.length; i++ ) { %>
                   <tbody>
                     <tr>
-                      <td>Tiger Nixon</td>
-                      <td>System Architect</td>
-                      <td>Edinburgh</td>
-                      <td>61</td>
-                      <td>2011/04/25</td>
-                      <td>$320,800</td>
-                      <td><img src="/abc/images/portfolio_01.jpg" height="65px" width="100px"></td>
+                      <td><%=event[i].title%></td>
+                      <td><%=event[i].agencyname%></td>
+                      <td><%=event[i].place%></td>
+                      <td><%=event[i].date%></td>
+                      <td><%=event[i].duration%></td>
+                      <td><%=event[i].description%></td>
+                      <td><%=event[i].person_capacity%></td>
+                      <td><%=event[i].cost_per_person%></td>
+                      <td><img src="<%=event[i].image%>" height="65px" width="100px"></td>
                       <td>
-                        <a href="/travel_agency/delete"> <button class="btn btn-lg btn-block" type="submit" >Delete</button></a>
+                        <a href="/travel_agency/delete/<%=event[i].id%>"> <button class="btn btn-lg btn-block" type="submit">Delete</button></a>
                       </td>
                     </tr>
                   </tbody>
+                  <% }%>
                 </table>
               </div>
             </div>
           </div>
         </div>
       </div>
+
+
+
     </main>
     <script src="/abc/js/jquery-3.3.1.min.js"></script>
     <script src="/abc/js/popper.min.js"></script>
@@ -66,4 +74,3 @@
     <script src="/abc/js/main.js"></script>
   </body>
 </html>
-
